@@ -1,5 +1,5 @@
 from allauth.socialaccount.providers.oauth.urls import default_urlpatterns
 
-from .provider import DropboxProvider
+from .provider import DropboxOAuth2Provider
 
-urlpatterns = default_urlpatterns(DropboxProvider)
+urlpatterns = default_urlpatterns(DropboxOAuth2Provider)
